--- a/C15_AngularJS/lesson/01_常用指令和控制器/16_自定义指令.html
+++ b/C15_AngularJS/lesson/01_常用指令和控制器/16_自定义指令.html
@@ -12,12 +12,14 @@
     <!-- 属性形式 -->
     <div xiao-xue></div>
     <!-- class 形式 -->
-    <div class="xiao-xue">
-        <h1>嵌套的内容<h1>
-    </div>
+    <div class="xiao-xue"></div>
     <!-- 注释形式 -->
     <!-- 这里注意：使用注释形式的话，注释 -- 和 -- 之间一定要有空格 -->
     <!-- directive:xiao-xue -->
+    
+    <xiao-xue>
+        <h1>嵌套的内容！！<h1>
+    </xiao-xue>
     
     <script type="text/javascript">
         angular.module('myApp', [])
