--- a/D01_Vue/lesson/07_计算属性.html
+++ b/D01_Vue/lesson/07_计算属性.html
@@ -9,7 +9,9 @@
     <div id="app">
         <!-- 将字符串切割为数组，翻转，再转化为字符串 -->
         <!--{{ msg.split("").reverse().join("") }}-->
-        {{ reverseMsg() }}
+        <!-- methods 中的方法 -->
+        <!--{{ reverseMsg() }}-->
+        <!-- computed 中的属性 -->
         {{ reverseMsg }}
     </div>
 </body>
@@ -20,16 +22,16 @@
             msg : "hello vue!"
         },
         methods : {
-            reverseMsg : function () {
-                return this.msg.split("").reverse().join("");
-            }
+//          reverseMsg : function () {
+//              return this.msg.split("").reverse().join("");
+//          }
         },
         computed : {
             // 1. 计算属性相比方法的性能更好
             // 2. 计算属性如果所依赖的属性没有发生变化，调用的都是返回的结果
-//          reverseMsg : function () {
-//              return this.msg.split("").reverse().join("");
-//          }
+            reverseMsg : function () {
+                return this.msg.split("").reverse().join("");
+            }
         }
     });
 </script>
