--- a/D03_Vue/lesson/notes/index.html
+++ b/D03_Vue/lesson/notes/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>notes</title>
+    <!-- 引入 CDN 加速的 CSS 文件 -->
+    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.css" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
