--- a/D04_Vue/lesson/resource/01_promise.html
+++ b/D04_Vue/lesson/resource/01_promise.html
@@ -15,13 +15,13 @@
     }
     
     async(1, 2, function (result) {
-        console.log(result);
+        console.log(result);    // 3
         if (result > 2) {
             async(result, 2, function (result) {
-                console.log(result);
+                console.log(result);    // 5
                 if (result > 3) {
                     async(result, 2, function (result) {
-                        console.log(result);
+                        console.log(result);    // 7
                     })
                 }
             })
