--- a/D04_Vue/lesson/resource/03_promise.html
+++ b/D04_Vue/lesson/resource/03_promise.html
@@ -35,6 +35,9 @@
             reject  失败时调用
         */
         return new Promise(function (resolve, reject) {
+            if (typeof a !== "number" || typeof b !== "number") {
+                reject(new Error("参数类型必须是数字"));
+            }
             setTimeout(function () {
                 resolve(a + b);
             }, 1000);
@@ -44,21 +47,24 @@
     /*
         then    接收两个函数作为参数，第一个函数成功的回调函数，第二个是失败的
     */
-    async(1, 2)
+    async(1, 'a')
         .then(function (result) {
-            console.log(result);    // 3
+            console.log(result);
             if (result > 2) {
                 return async(result, 2);
             }
+        },function (error) {
+            console.log(error);     // Error: 参数类型必须是数字
+            return 4;
         })
         .then(function (result) {
-            console.log(result);    // 5
+            console.log(result);    // 4
             if (result > 3) {
                 return async(result, 2);
             }
         })
         .then(function (result) {
-            console.log(result);    // 7
+            console.log(result);    // 6
         })
 </script>
 </html>
