--- a/Bweek_ECMAScirpt6/lesson/03_函数的一些新增特点.html
+++ b/Bweek_ECMAScirpt6/lesson/03_函数的一些新增特点.html
@@ -5,6 +5,11 @@
     <title>Title</title>
 </head>
 <body>
-
+<script type="text/javascript">
+    function foo (a = 40, f = function () {}) {
+        f();
+        console.log(a);
+    }
+</script>
 </body>
 </html>
