--- a/Bweek_ECMAScirpt6/lesson/03_函数的一些新增特点.html
+++ b/Bweek_ECMAScirpt6/lesson/03_函数的一些新增特点.html
@@ -6,7 +6,15 @@
 </head>
 <body>
 <script type="text/javascript">
-    
+//  function foo (a = 40, f = function () {}) {
+//      f();
+//      console.log(a);
+//  }
+    function foo(2, function () {
+        console.log("abc");
+    });
+    foo(2,f());
+    foo();
 </script>
 </body>
 </html>
