--- a/C01_Mobile/lesson/02_异常处理.html
+++ b/C01_Mobile/lesson/02_异常处理.html
@@ -31,7 +31,7 @@
         console.log(age);
     } catch (e) {
         // e 是异常，打印出异常信息
-        console.log(e.toString());
+        console.log(e.toString());  // ReferenceError: age is not defined
     }
     // 此处能执行
     console.log("----------");
