--- a/C01_Mobile/lesson/03_私有变量的使用.html
+++ b/C01_Mobile/lesson/03_私有变量的使用.html
@@ -34,7 +34,7 @@
                 dog = newDog;
                 return;
             }
-            // 如果类型不是 Dog，抛异常
+            // 如果类型不是 Dog，则抛出异常
             throw new Error("不好意思，类型不是狗");
         }
         
