--- a/test.html
+++ b/test.html
@@ -6,13 +6,23 @@
 </head>
 <body>
 <script type="text/javascript">
-var a = 1;
-function func () {
-    console.log(a);
-    var a = 'in function';
+    
+function func1 () {
+    var n = 99;
+    nAdd = function () {
+        this.n += 1;
+        console.log(this.n);
+    };
+    function func2 () {
+        console.log(n);
+    }
+    return func2;
 }
-func();  // undefined
-console.log(a);  // 1
+var result = func1();
+result();  // 99
+nAdd();    // NaN
+result();  // 99
+
 </script>
 </body>
 </html>
