--- a/test.html
+++ b/test.html
@@ -3,25 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style type="text/css">
+    	p:only-child{
+    	    color: red;
+    	}
+    	:root{
+    	    background-color: yellow;
+    	}
+    </style>
 </head>
 <body>
+<div>
+	<p>00</p>
+</div>
+<div>
+	<p>1</p>
+	<p>2</p>
+	<div>
+		<p>00</p>
+		<p>00</p>
+	</div>
+	<p>3</p>
+	<p>4</p>
+	<p>5</p>
+</div>
+<div>
+    <p>1</p>
+    <p>2</p>
+    <p>3</p>
+    <p>4</p>
+    <p>5</p>
+</div>
+<div>
+    <p>1</p>
+    <p>2</p>
+    <p>3</p>
+    <p>4</p>
+    <a>5</a>
+</div>
+
 <script type="text/javascript">
-    
-function func1 () {
-    var n = 99;
-    nAdd = function () {
-        this.n += 1;
-        console.log(this.n);
-    };
-    function func2 () {
-        console.log(n);
-    }
-    return func2;
-}
-var result = func1();
-result();  // 99
-nAdd();    // NaN
-result();  // 99
+
+
 
 </script>
 </body>
