--- a/test.html
+++ b/test.html
@@ -7,6 +7,12 @@
 <body>
 <script type="text/javascript">
 
+for (var i = 0; i < 10; i++) {
+    setTimeout(function () {
+        console.log(i);  // 10个 10
+    }, 0);
+}
+
 </script>
 </body>
 </html>
