--- a/test.html
+++ b/test.html
@@ -10,12 +10,13 @@
 var a = [21, 45, 2, 6, 78, 33, 33, 1, 9];
 function sort (arr) {
     // 补全函数
+    var temp;
     for (var i = 0; i < arr.length; i++) {
-        for (var j = i+1; j < arr.length-1-i; j++) {
-            if (arr[i] > arr[j]) {
-                var temp = arr[i];
-                arr[i] = arr[j];
-                arr[j] = temp;
+        for (var j = 0; j < arr.length-1; j++) {
+            if (arr[i] > arr[j+1]) {
+                temp = arr[i];
+                arr[i] = arr[j+1];
+                arr[j+1] = temp;
             }
         }
     }
