--- a/test.html
+++ b/test.html
@@ -5,8 +5,16 @@
     <title>Title</title>
 </head>
 <body>
+<div id="element"></div>
 <script type="text/javascript">
+var ele = document.getElementById("element");
 
+setTimeout(function () {
+    var r = parseInt(Math.random()*100);
+    var a = '<a m="'+(r+1)+'">'+r+'</a>';
+    ele.append(a);
+}, 1000);
+// TODO 代码放在这里执行
 </script>
 </body>
 </html>
