--- a/test.html
+++ b/test.html
@@ -31,7 +31,7 @@ setTimeout(function () {
     var a = '<a m="'+(r+1)+'">'+r+'</a>';
     ele.append(a);
 }, 1000);
-// TODO 代码放在这里执行
+// 代码放在这里执行
 var as = document.getElementsByTagName("a");
 </script>
 </body>
