--- a/D01_Vue/lesson/02_属性变化.html
+++ b/D01_Vue/lesson/02_属性变化.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script type="text/javascript" src="js/vue.min.js"></script>
+    <script type="text/javascript" src="js/vue.js"></script>
 </head>
 <body>
     <div id="app">
@@ -15,9 +15,6 @@
         el : '#app',
         data : {
             msg : "hello Vue!!"
-        },
-        methods : {
-            
         }
     });
 </script>
