--- a/D01_Vue/lesson/05_双向数据绑定.html
+++ b/D01_Vue/lesson/05_双向数据绑定.html
@@ -3,15 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script type="text/javascript" src="js/vue.min.js"></script>
-    <style type="text/css">
-        .fade-enter-active, .fade-leave-active {
-            transition: opacity .5s
-        }
-        .fade-enter, .fade-leave-active {
-            opacity: 0
-        }
-    </style>
+    <script type="text/javascript" src="js/vue.js"></script>
 </head>
 <body>
     <div id="app">
@@ -27,9 +19,6 @@
         el : '#app',
         data : {
             msg : "hello Vue!!",
-        },
-        methods : {
-            
         }
     });
 </script>
