--- a/D01_Vue/lesson/03_if.html
+++ b/D01_Vue/lesson/03_if.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script type="text/javascript" src="js/vue.min.js"></script>
+    <script type="text/javascript" src="js/vue.js"></script>
     <style type="text/css">
         .fade-enter-active, .fade-leave-active {
             transition: opacity .5s
@@ -27,9 +27,6 @@
         data : {
             msg : "hello Vue!!",
             show : true
-        },
-        methods : {
-            
         }
     });
 </script>
