--- a/D01_Vue/lesson/04_for.html
+++ b/D01_Vue/lesson/04_for.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script type="text/javascript" src="js/vue.min.js"></script>
+    <script type="text/javascript" src="js/vue.js"></script>
     <style type="text/css">
         .fade-enter-active, .fade-leave-active {
             transition: opacity .5s
@@ -37,9 +37,6 @@
                 "打 lol",
                 "吃饭睡觉打豆豆"
             ]
-        },
-        methods : {
-            
         }
     });
 </script>
