--- a/D01_Vue/lesson/07_计算属性.html
+++ b/D01_Vue/lesson/07_计算属性.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script type="text/javascript" src="js/vue.min.js"></script>
+    <script type="text/javascript" src="js/vue.js"></script>
 </head>
 <body>
     <div id="app">
         <!-- 将字符串切割为数组，翻转，再转化为字符串 -->
-        <!--{{ msg.split("").reverse().join("") }}-->
+        {{ msg.split("").reverse().join("") }}
         <!-- methods 中的方法 -->
         <!--{{ reverseMsg() }}-->
         <!-- computed 中的属性 -->
