--- a/D01_Vue/lesson/09_watch.html
+++ b/D01_Vue/lesson/09_watch.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script type="text/javascript" src="js/vue.min.js"></script>
+    <script type="text/javascript" src="js/vue.js"></script>
 </head>
 <body>
     <div id="app">
@@ -18,9 +18,6 @@
             lastName : '菜也'
             // 使用 watch 这种方式时，需要下面的语句
 //          fullName : '唐菜也'
-        },
-        methods : {
-            
         },
 //      watch : {
 //          firstName : function (val, oldVal) {
