--- a/D01_Vue/lesson/22_todos.html
+++ b/D01_Vue/lesson/22_todos.html
@@ -7,11 +7,12 @@
 </head>
 <body>
     <div id="app">
-        代办事项：<input type="text" />
+        代办事项：<input type="text" v-on:keydown.up="add"/>
         <ul>
             <todo-item v-for="(item,key) in todos"
                 v-bind:todo="item"
-                ></todo-item>
+                v-bind:index="key"
+                v-on:del="delFn(key)"></todo-item>
         </ul>
     </div>
 </body>
@@ -19,25 +20,26 @@
     Vue.component("todo-item", {
         template : `
             <li>
-                <p>代办事项</p>
-                <a href="###">删除</a>
+                <p>{{ todo }}</p>
+                <a href="###" @click="$emit('del')">删除</a>
             </li>
         `,
-        prop : ["todo", "index"]
+        props : ["todo", "index"]
     });
     var vm = new Vue({
         el : '#app',
         data : {
-            todos : [
-                "买菜",
-                "玩游戏"
-            ]
+            todos : []
         },
         methods : {
-           
-        },
-        components : {
-            
+           delFn : function (index) {
+                this.todos.splice(index, 1);
+           },
+           add : function (e) {
+                console.log(e.target.value);
+                var val = e.target.value;
+                this.todos.push(val);
+           }
         }
     });
 </script>
