--- a/test.html
+++ b/test.html
@@ -32,7 +32,7 @@
         ele.append(a);
     }, 1000);
     // 代码放在这里执行
-    var as = document.getElementsByTagName("a");
+    var as = document.getElementsByTagName("a")
 </script>
 </body>
 </html>
