--- a/C15_AngularJS/lesson/01_常用指令和控制器/22_函数绑定.html
+++ b/C15_AngularJS/lesson/01_常用指令和控制器/22_函数绑定.html
@@ -31,7 +31,7 @@
                         sayHello 方法需要一个参数，我们在调用 say 方法传参的时候，
                         要传入一个对象，sayHello 需要的形参就是这个对象的某个属性
                     */
-                    template : '<input type="text" ng-model="userName" />' 
+                    template : '<input type="text" ng-model="userName" />' +
                         '<input type="button" value="sayBtn" ng-click="say({name : userName})" />'
                 }
             }])
