--- a/test.html
+++ b/test.html
@@ -5,6 +5,10 @@
 	<title>Document</title>
 </head>
 <body>
-	
+	<video id="media" src="http://www.iqiyi.com/dongman/20110830/474ddc3e8440cb55.html#curid=102323400_2e2cfc757ed34fa9a72ca9a561ceff4f" controls></video>
+
 </body>
+<script>
+	var Media = document.getElementById("media"); 
+</script>
 </html>
