--- a/test.html
+++ b/test.html
@@ -5,10 +5,35 @@
 	<title>Document</title>
 </head>
 <body>
-	<video id="media" src="http://www.iqiyi.com/dongman/20110830/474ddc3e8440cb55.html#curid=102323400_2e2cfc757ed34fa9a72ca9a561ceff4f" controls></video>
+	// 一、打电话
+<a href="tel:0755-10086">打电话给:0755-10086</a>
+ 
+//  二、发短信，winphone系统无效
+<a href="sms:10086">发短信给: 10086</a>
+ 
+// 三、写邮件
+//注：在添加这些功能时，第一个功能以"?"开头，后面的以"&"开头
+//1.普通邮件
+<a href="mailto:863139978@qq.com">点击我发邮件</a>
+//2.收件地址后添加?cc=开头，可添加抄送地址（Android存在兼容问题）
+<a href="mailto:863139978@qq.com?cc=zhangqian0406@yeah.net">点击我发邮件</a>
+//3.跟着抄送地址后，写上&bcc=,可添加密件抄送地址（Android存在兼容问题）
+<a href="mailto:863139978@qq.com?cc=zhangqian0406@yeah.net&bcc=384900096@qq.com">点击我发邮件</a>
+//4.包含多个收件人、抄送、密件抄送人，用分号(;)隔开多个邮件人的地址
+<a href="mailto:863139978@qq.com;384900096@qq.com">点击我发邮件</a>
+//5.包含主题，用?subject=
+<a href="mailto:863139978@qq.com?subject=邮件主题">点击我发邮件</a>
+//6.包含内容，用?body=;如内容包含文本，使用%0A给文本换行 
+<a href="mailto:863139978@qq.com?body=邮件主题内容%0A腾讯诚信%0A期待您的到来">点击我发邮件</a>
+//7.内容包含链接，含http(s)://等的文本自动转化为链接
+<a href="mailto:863139978@qq.com?body=http://www.baidu.com">点击我发邮件</a>
+//8.内容包含图片（PC不支持）
+<a href="mailto:863139978@qq.com?body=<img src='images/1.jpg' />">点击我发邮件</a>
+//9.完整示例
+<a href="mailto:863139978@qq.com;384900096@qq.com?cc=zhangqian0406@yeah.net&bcc=993233461@qq.com&subject=[邮件主题]&body=腾讯诚邀您参与%0A%0Ahttp://www.baidu.com%0A%0A<img src='images/1.jpg' />">点击我发邮件</a>
 
 </body>
 <script>
-	var Media = document.getElementById("media"); 
+
 </script>
 </html>
