--- a/test.html
+++ b/test.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>视频</title>
 </head>
 <body>
-	
+	<video src="D:\D（100G）\最难整理部分\毕业照\电信13届纪念相册.swf" controls=""></video>
 </body>
 </html>
