--- a/test.html
+++ b/test.html
@@ -11,7 +11,7 @@
 		// 获取用户输入的字符串
 		let arr = prompt().split("");
 
-		// 去重
+		// 数组去重
 		let newArr = [];
 		let obj = {};
 		for (let i = 0; i < arr.length; i++) {
