--- a/review/20170717143851 - margin-top 问题.html
+++ b/review/20170717143851 - margin-top 问题.html
@@ -7,7 +7,7 @@
 		.div1 {
 			width: 200px;
 			height: 400px;
-			background-color: #f00;
+			background-color: #ff0000;
 			margin-top: 50px;
 			/*overflow: hidden;*/
 			border: 1px solid black;
