--- a/test.html
+++ b/test.html
@@ -13,7 +13,7 @@
 		let arr = prompt().split("");
 
 		/**
-		 * 数组去重函数
+		 * 数组去重
 		 */
 		let newArr = [];
 		let obj = {};
@@ -27,7 +27,7 @@
 		}
 
 		/**
-		 * 数组排序函数
+		 * 数组排序
 		 */
 		let temp;
 		for (let i = 0; i < newArr.length-1; i++) {
@@ -41,7 +41,7 @@
 		}
 
 		/**
-		 * 字符串重组函数
+		 * 字符串重组
 		 */
 		let newStr = '';
 		for (let i = 0; i < newArr.length; i++) {
