--- a/modal.html
+++ b/modal.html
@@ -19,9 +19,7 @@
 	<div class="modal-dialog">
 		<div class="modal-content">
 			<div class="modal-body">
-				<li>
-					<a href="http://tracing.g-eplus.com/group1/M00/00/00/rBKYMFmaVhOABaAlAAZVTx4FIyI443.jpg" rel="gallery" class="pirobox_gall" title="资料详情"></a>
-				</li>
+				<iframe src="http://tracing.g-eplus.com/group1/M00/00/00/rBKYMFmaViqAAtjcAAdZXsw8TI4726.mp4" frameborder="0"></iframe>
 			</div>
 		</div><!-- /.modal-content -->
 	</div><!-- /.modal -->
