--- a/iframe.html
+++ b/iframe.html
@@ -58,7 +58,7 @@
 
         // 现在我们可以启动应用了！
         // 路由器会创建一个 App 实例，并且挂载到选择符 #app 匹配的元素上。
-        router.start(App, '#app')；
+        router.start(App, '#app')
 
     </script>
 </body>
