--- a/modal.html
+++ b/modal.html
@@ -22,8 +22,7 @@
 				<iframe src="http://tracing.g-eplus.com/group1/M00/00/00/rBKYMFmaViqAAtjcAAdZXsw8TI4726.mp4" frameborder="0"></iframe>
 			</div>
 		</div><!-- /.modal-content -->
-	</div>
-	<!-- /.modal -->
+	</div><!-- /.modal -->
 </div>
 </body>
 </html>
